# temp

./: Cargo.toml
src/: main.rs
src/config/: api_server.rs  app_state.rs  mod.rs  mongo.rs
src/routes/: mod.rs
src/routes/api/: mod.rs
src/routes/api/auth/: login.rs  logout.rs  mod.rs  signup.rs  whoami.rs
src/routes/api/board/: create.rs  delete.rs  get.rs  list.rs  mod.rs  share.rs  update.rs
src/routes/api/quiz/: create.rs  delete.rs  get.rs  list.rs  mod.rs  share.rs  update.rs
src/routes/ws/: mod.rs
src/types/: mod.rs
src/types/board/: board.rs  mod.rs
src/types/quiz/: mod.rs  quiz.rs
src/types/user/: user.rs
src/types/ws/: board_server.rs  board_session.rs  mod.rs
