[package]
name = "shareNotes-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
actix-web-actors = "4.3.1"
argon2 = "0.5.3"
futures = "0.3.31"
mongodb = "3.2.3"
serde = "1.0.219"
serde_json = "1.0.140"
uuid = "1.16.0"
env_logger = "0.11.8"
dotenv = "0.15.0"
log = "0.4.27"
chrono = "0.4.40"
bson = {version = "2.14.0", features = ["chrono-0_4"] }
actix = "0.13.5"
actix-rt = "2.10.0"
actix-cors = "0.7.1"
